--- a/src/main/resources/templates/include_header.html
+++ b/src/main/resources/templates/include_header.html
@@ -192,6 +192,7 @@
 
 	<!--通知的js-->
 	<!-- 自定义js -->
+    <script type="text/javascript" src="/js/appjs/manager/order/claim.js"></script>
 	<!--<script src="/js/app.js?v=4.1.0"></script>-->
 	<script type="text/javascript" src="/js/contabs.js"></script>
 	<!-- 第三方插件 -->
