--- a/src/main/resources/templates/manager/index/main.html
+++ b/src/main/resources/templates/manager/index/main.html
@@ -135,6 +135,7 @@
         				var htmlText = "";
         				for (i = 0; i < rows.length; i++) {
                             var title = rows[i].title;        //执行替换成空字符
+                            var product = JSON.stringify(rows[i]).replace(/\"/g, "'");
                             // htmlText += '<div  style="height: 25em" class="col-md-3">\n' +
                             //     '                            <div>\n' +
                             //     '                                <img src="/img/yazi1.jpg"  class="text-center center-block" style="width: 12em;height: 16em" >\n' +
@@ -148,8 +149,8 @@
         					htmlText += '<div  style="height: 25em" class="col-md-3"> <div>';
         					htmlText += '<img src="'+ rows[i].picture +'"  class="text-center center-block" style="width: 12em;height: 16em" >' ;
         					htmlText += '<div><a class="note" href="/manager/product/open/' + rows[i].id + '"  style="text-overflow: ellipsis;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;">' + title + '</a>';
-                            htmlText += '<label>剩余数量：10000</label><button class="btn-danger pull-right">申领</button></div>';
-        					htmlText += '</div></div>';
+                            htmlText += '<label>剩余数量：' + rows[i].stock + '</label><button class="btn-danger pull-right" onclick="claimProduct(' + product + ')">申领</button></div>';
+                            htmlText += '</div></div>';
         				}
 
         				$("#incomeNum").append(htmlText);
