--- a/src/main/resources/templates/manager/index/main.html
+++ b/src/main/resources/templates/manager/index/main.html
@@ -3,7 +3,17 @@
 <meta charset="utf-8">
 <head th:include="manager/index/include_header::header"></head>
 <link rel="stylesheet" type="text/css" href="/css/manager/style.css">
+<style>
+    /*.claim {*/
+        /*position: absolute;*/
+        /*bottom: 1em;*/
+    /*}*/
 
+    /*.claim button{*/
+        /*position: absolute;*/
+        /*right: 1em;*/
+    /*}*/
+</style>
 <body class="user-select">
 
 	<header class="header" >
@@ -33,13 +43,15 @@
                         </div>
                     </div>
                     <div id="incomeNum">
-                        <!--<div style="height: 25em" class="col-md-3">-->
+                        <!--<div style="height: 22em" class="col-md-3">-->
                             <!--<div>-->
                                 <!--<img src="/img/yazi1.jpg"  class="text-center center-block" style="width: 12em;height: 16em" >-->
-                                <!--<div>-->
-                                    <!--<a><h4>5.5－6.2斤的麻鸭，125日纯青头鸭，125日老鸭公母统装</h4></a>-->
+                                <!--<div >-->
+                                    <!--<a><h4 style="height: 2em">5.5－6.2斤的麻鸭，</h4></a>-->
+                                    <!--<div>-->
                                     <!--<label>剩余数量：10000</label>-->
-                                    <!--<button class="btn-danger pull-right">申领</button>-->
+                                    <!--<button class="btn-danger pull-right" >申领</button>-->
+                                    <!--</div>-->
                                 <!--</div>-->
                             <!--</div>-->
                         <!--</div>-->
@@ -111,7 +123,7 @@
 	</body>
 	<div th:include="include_header::footer"></div>
 	<script type="text/javascript">
-		var limit = 10;
+		var limit = 12;
 		var currentPage = 0;
 		var total;
 
@@ -126,7 +138,7 @@
         }
         function bindList(offset) {
         	$.ajax({
-        			url : '/manager/product/mall/list?limit=10&offset=' + offset,
+        			url : '/manager/product/mall/list?limit=12&offset=' + offset,
         			method : 'get',
         			dataType : 'json',
         			success : function(data) {
@@ -145,10 +157,10 @@
                             //     '                                </div>\n' +
                             //     '                            </div>\n' +
                             //     '                        </div>';
-        					htmlText += '<div  style="height: 25em" class="col-md-3"> <div>';
-        					htmlText += '<img src="'+ rows[i].picture +'"  class="text-center center-block" style="width: 12em;height: 16em" >' ;
-        					htmlText += '<div><a class="note" href="/manager/product/open/' + rows[i].id + '"  style="text-overflow: ellipsis;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;">' + title + '</a>';
-                            htmlText += '<label>剩余数量：10000</label><button class="btn-danger pull-right">申领</button></div>';
+        					htmlText += '<div style="height: 23em" class="col-md-3"> <div><a  href="/manager/product/open/' + rows[i].id + '"  >';
+        					htmlText += '<img src="'+ rows[i].picture +'"  class="text-center center-block" style="width: 13em;height: 16em" >' ;
+        					htmlText += '<div><p class="note" style="text-overflow: ellipsis;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;height: 3em">' + title + '</p></a>';
+                            htmlText += ' <div class="text-left"><h5>' + rows[i].farm + '</h5><span>剩余：' + rows[i].stock + '</span><button class="btn-danger pull-right">申领</button></div></div>';
         					htmlText += '</div></div>';
         				}
 
