--- a/src/main/resources/templates/manager/orderProductGrowth/orderProductGrowth.html
+++ b/src/main/resources/templates/manager/orderProductGrowth/orderProductGrowth.html
@@ -9,10 +9,10 @@
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
 						<div class="columns pull-left">
-							<button  type="button" class="btn  btn-primary" onclick="add()">
+							<button shiro:hasPermission="manager:orderProductGrowth:add" type="button" class="btn  btn-primary" onclick="add()">
 								<i class="fa fa-plus" aria-hidden="true"></i>添加
 							</button>
-							<button  type="button" class="btn  btn-danger"
+							<button shiro:hasPermission="manager:orderProductGrowth:batchRemove" type="button" class="btn  btn-danger"
 								onclick="batchRemove()">
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
 							</button>
@@ -39,23 +39,23 @@
 				var s_resetPwd_h = 'hidden';
 			</script>
 		</div>
-		<div shiro:hasPermission="manager:order:edit">
+		<div shiro:hasPermission="manager:orderProductGrowth:edit">
 			<script type="text/javascript">
 				s_edit_h = '';
 			</script>
 		</div>
-		<div shiro:hasPermission="manager:order:remove">
+		<div shiro:hasPermission="manager:orderProductGrowth:remove">
 			<script type="text/javascript">
 				var s_remove_h = '';
 			</script>
 		</div>
-		<div shiro:hasPermission="manager:order:resetPwd">
+		<div shiro:hasPermission="manager:orderProductGrowth:resetPwd">
 			<script type="text/javascript">
 				var s_resetPwd_h = '';
 			</script>
 		</div>
 	</div>
 	<div th:include="include :: footer"></div>
-	<script type="text/javascript" src="/js/appjs/manager/order/order.js"></script>
+	<script type="text/javascript" src="/js/appjs/manager/orderProductGrowth/orderProductGrowth.js"></script>
 </body>
 </html>
