--- a/src/main/resources/templates/manager/order/add.html
+++ b/src/main/resources/templates/manager/order/add.html
@@ -75,7 +75,7 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
-	<script type="text/javascript" src="/js/appjs/manager/order/add.js">
-	</script>
+	<script type="text/javascript" src="/js/appjs/manager/order/add.js"></script>
+
 </body>
 </html>
