--- a/src/main/resources/templates/system/user/user_center.html
+++ b/src/main/resources/templates/system/user/user_center.html
@@ -21,8 +21,7 @@
                             <li onclick="change_title(this)" class="active"><a style="border: 0px solid transparent !important;" href="#basic_info" data-toggle="tab">基本资料</a></li>
                             <!--<li><a href="#photo_info" data-toggle="tab">头像修改</a></li>-->
                             <li onclick="change_title(this)"><a style="border: 0px solid transparent !important;" href="#pwd_info" data-toggle="tab">修改密码</a></li>
-                            <li onclick="change_title(this)"><a style="border: 0px solid transparent !important;" href="#my_question" data-toggle="tab">我的订单</a></li>
-                            <li onclick="change_title(this)"><a style="border: 0px solid transparent !important;" href="#my_collect" data-toggle="tab">我的收藏</a></li>
+                            <li onclick="change_title(this)"><a style="border: 0px solid transparent !important;" href="#my_order" data-toggle="tab">我的订单</a></li>
                         </ul>
                     </div>
                     <hr style="height:1px;border:none;border-top:1px solid lightgray;" />
@@ -163,29 +162,18 @@
                     </div>
 
                     <!--my_order-->
-                    <div class=" tab-pane fade" id="my_question">
+                    <div class=" tab-pane fade" id="my_order">
                         <div id="my_order_content">
 
+                            <table id="myOrderTable" data-mobile-responsive="true" class="table-no-bordered">
+                            </table>
+
+
+                            </div>
                         </div>
-                        <div class="clearfix">
-                            <p id="flagLoaded" style="display: none; text-align: center;">已全部加载</p>
-                            <a id="flagLoad" style="display: none;" class="btn btn-secondary float-right"
-                               href="javascript:void(0)" onclick="nextPage_order()">点击加载更多 &rarr;</a>
-                        </div>
+
                     </div>
 
-
-                    <!--my_collect-->
-                    <div class="tab-pane fade" id="my_collect">
-                        <div id="my_collect_content">
-
-                        </div>
-                        <div class="clearfix">
-                            <p id="flagLoaded_collect" style="display: none; text-align: center;">已全部加载</p>
-                            <a id="flagLoad_collect" style="display: none;" class="btn btn-secondary float-right"
-                               href="javascript:void(0)" onclick="nextPage_collect()">点击加载更多 &rarr;</a>
-                        </div>
-                    </div>
 
                 </div>
 
@@ -194,9 +182,9 @@
     </div>
 </div>
 <div th:include="include_header :: footer"></div>
+<script type="text/javascript" src="/js/appjs/sys/user/personal.js"></script>
 <script type="text/javascript" src="/js/plugins/layer/laydate/laydate.js" ></script>
 <script type="text/javascript" src="/js/plugins/distpicker/distpicker.data.min.js"></script>
 <script type="text/javascript" src="/js/plugins/distpicker/distpicker.min.js"></script>
-<script type="text/javascript" src="/js/appjs/sys/user/personal.js"></script>
 </body>
 </html>
