--- a/src/main/resources/templates/manager/orderProductGrowth/edit.html
+++ b/src/main/resources/templates/manager/orderProductGrowth/edit.html
@@ -2,6 +2,8 @@
 <html>
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
+<link rel="stylesheet" type="text/css" href="/css/manager/style.css">
+
 <body class="gray-bg">
 	<div class="wrapper wrapper-content ">
 		<div class="row">
@@ -13,40 +15,38 @@
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">订单id：</label>
 								<div class="col-sm-8">
-									<input id="orderId" name="orderId" th:value="${orderProductGrowth.orderId}" class="form-control" type="text">
+									<input id="orderId" name="orderId" th:value="${orderProductGrowth.orderId}" class="form-control" type="text" readonly>
 								</div>
 							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">产品id：</label>
-								<div class="col-sm-8">
-									<input id="productId" name="productId" th:value="${orderProductGrowth.productId}" class="form-control" type="text">
-								</div>
-							</div>
+							<input id="productId" name="productId" th:value="${orderProductGrowth.productId}"  type="hidden">
+
 														<div class="form-group">	
 								<label class="col-sm-3 control-label">生长情况描述：</label>
 								<div class="col-sm-8">
-									<input id="description" name="description" th:value="${orderProductGrowth.description}" class="form-control" type="text">
+									<textarea id="description" name="description" th:text="${orderProductGrowth.description}" class="form-control" rows="3"></textarea>
+									<!--<input id="description" name="description" th:value="${orderProductGrowth.description}" class="form-control" type="text">-->
 								</div>
 							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">图片地址：</label>
+
+							<div class="form-group">
+								<label class="col-sm-3 control-label">展示图片：</label>
 								<div class="col-sm-8">
-									<input id="picture" name="picture" th:value="${orderProductGrowth.picture}" class="form-control" type="text">
+									<input id="picture" name="picture" class="form-control" type="hidden" th:value="${orderProductGrowth.picture}">
+									<div class="fileinput fileinput-new" data-provides="fileinput" id="exampleInputUpload">
+										<div class="fileinput-preview fileinput-exists thumbnail"
+											 style="max-width: 200px; max-height: 150px;">
+											<img id='picImg' style="width: 100%;height: auto;max-height: 140px;" src="/img/noimage.png"
+												 alt=""/>
+										</div>
+										<div>
+
+										</div>
+
+									</div>
 								</div>
 							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">：</label>
-								<div class="col-sm-8">
-									<input id="createTime" name="createTime" th:value="${orderProductGrowth.createTime}" class="form-control" type="text">
-								</div>
-							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">：</label>
-								<div class="col-sm-8">
-									<input id="updateTime" name="updateTime" th:value="${orderProductGrowth.updateTime}" class="form-control" type="text">
-								</div>
-							</div>
-																					<div class="form-group">
+
+							<div class="form-group">
 								<div class="col-sm-8 col-sm-offset-3">
 									<button type="submit" class="btn btn-primary">提交</button>
 								</div>
@@ -59,6 +59,10 @@
 	</div>
 	<div th:include="include::footer"></div>
 	<script type="text/javascript" src="/js/appjs/manager/orderProductGrowth/edit.js">
+	</script>
+	<script th:inline="javascript">
+        var picture = /*[[${orderProductGrowth.picture}]]*/ null;
+        $('#picImg').attr("src", picture);
 	</script>
 </body>
 </html>
