增加视频地址

--- a/src/main/resources/templates/include_header.html
+++ b/src/main/resources/templates/include_header.html
@@ -120,14 +120,14 @@
 		<div class="collapse navbar-collapse" id="header-navbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<form class="navbar-form form-inline" >
+					<div class="navbar-form form-inline" style="margin-top: 1em">
 						<div class="input-group">
-							<input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" autocomplete="off">
+							<input type="text" name="keyword" id="keyword" class="form-control" size="35" th:value="${keyword}" placeholder="请输入关键字">
 							<span class="input-group-btn">
-							<button class="btn btn-default btn-search" name="search" type="submit" >搜索</button>
+							<button class="btn btn-default btn-search" onclick="searchProduct()">搜索</button>
 						</span>
 						</div>
-					</form>
+					</div>
 				</li>
 				<!--<li><a href="/manager/product/open/1">关于</a></li>-->
 				<li th:if="${session.username} == null"><a href="/login">登录</a></li>
@@ -182,7 +182,6 @@
 
 	<script src="/js/plugins/layer/layer.js"></script>
 	<script src="/js/ajax-util.js"></script>
-	<script src="/js/appjs/blog/clean-blog.min.js"></script>
 	<script src="/js/plugins/summernote/summernote.min.js"></script>
 	<script src="/js/plugins/summernote/summernote-zh-CN.js"></script>
 	<script src="/js/plugins/validate/jquery.validate.min.js"></script>
@@ -193,7 +192,7 @@
     <script type="text/javascript" src="/js/plugins/layer/laydate/laydate.js" ></script>
     <script type="text/javascript" src="/js/plugins/distpicker/distpicker.data.min.js"></script>
     <script type="text/javascript" src="/js/plugins/distpicker/distpicker.min.js"></script>
-    <script type="text/javascript" src="/js/appjs/sys/user/gg-bootdo.js"></script>
+    <!--<script type="text/javascript" src="/js/appjs/sys/user/gg-bootdo.js"></script>-->
 
 	<!--通知的js-->
 	<!-- 自定义js -->
@@ -224,6 +223,11 @@
                 }
         });
 
+        function searchProduct(){
+            var keyword = $('#keyword').val();
+            var url = "/mall/index?keyword=" + keyword;
+            window.location.href = url;
+		}
 	</script>
 </div>
 
