--- a/src/main/resources/templates/manager/index/main.html
+++ b/src/main/resources/templates/manager/index/main.html
@@ -125,8 +125,13 @@
         	bindList(currentPage * limit)
         }
         function bindList(offset) {
+            var keyword = $("#keyword").val();
+            var url = '/manager/product/mall/list?limit=12&offset=';
+            if (keyword!=null&&keyword!=undefined&&keyword!=""){
+                url = '/manager/product/mall/list/'+ keyword +'?limit=12&offset=';
+            }
         	$.ajax({
-        			url : '/manager/product/mall/list?limit=12&offset=' + offset,
+        			url : url + offset,
         			method : 'get',
         			dataType : 'json',
         			success : function(data) {
@@ -136,11 +141,10 @@
         				for (i = 0; i < rows.length; i++) {
                             var title = rows[i].title;        //执行替换成空字符
                             var product = JSON.stringify(rows[i]).replace(/\"/g, "'");
-        					htmlText += '<div  style="height: 23em" class="col-md-3"> <div>';
-        					htmlText += '<img src="'+ rows[i].picture +'"  class="text-center center-block" style="width: 12em;height: 16em" >' ;
-        					htmlText += '<div><a class="note" href="/manager/product/open/' + rows[i].id + '"  style="text-overflow: ellipsis;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;height: 3em">' + title + '</a>';
-                            // htmlText += '<label>剩余数量：' + rows[i].stock + '</label><button class="btn-danger pull-right" onclick="claimProduct(' + product + ')">申领</button></div>';
-                            htmlText += '<label>剩余数量：' + rows[i].stock + '</label><button class="btn-danger pull-right"><a href="/manager/order/claim/' + rows[i].id + '">申领</a></button></div>';
+                            htmlText += '<div style="height: 23em" class="col-md-3"> <div><a  href="/manager/product/open/' + rows[i].id + '"  >';
+                            htmlText += '<img src="'+ rows[i].picture +'"  class="text-center center-block" style="width: 13em;height: 16em" >' ;
+                            htmlText += '<div><p class="note" style="text-overflow: ellipsis;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;height: 3em">' + title + '</p></a>';
+                            htmlText += '<div class="text-left"><h5>' + rows[i].farm + '</h5><span>剩余：' + rows[i].stock + '</span><button class="btn-danger pull-right" onclick="claimProduct(' + product + ')">申领</button></div></div>';
                             htmlText += '</div></div>';
         				}
 
