页面优化，代码整理

--- a/src/main/resources/templates/common/file/file.html
+++ b/src/main/resources/templates/common/file/file.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XiaoDaBang - 文件管理器</title>
+    <title>文件管理器</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="shortcut icon" href="xiaodabang_title_logo.ico">
