--- a/src/main/resources/templates/index_v1.html
+++ b/src/main/resources/templates/index_v1.html
@@ -49,7 +49,7 @@
                             <li><a href="/logout">安全退出</a>
                             </li>
                         </ul>
-                        <div class="logo-element">xiaodabang</div>
+                        <div class="logo-element"></div>
                     </div>
                 </li>
                 <li><a href="#"> <i class="fa fa-home"></i> <span
