--- a/src/main/resources/templates/merchantRegister.html
+++ b/src/main/resources/templates/merchantRegister.html
@@ -38,7 +38,7 @@
 								<span class="tips">最多32个字符</span>
 							</div>
 							<div class="col-sm-10 input">
-								<input class="form-control" type="text" name="username" id="name" placeholder="校大帮" onblur="v_name();" onkeyup="v_name();" >
+								<input class="form-control" type="text" name="username" id="name" placeholder="名称" onblur="v_name();" onkeyup="v_name();" >
 								<div class="none"><span></span></div>
 							</div>
 						</div>
