--- a/src/main/resources/templates/system/user/user_center.html
+++ b/src/main/resources/templates/system/user/user_center.html
@@ -8,7 +8,9 @@
 <header class="header" >
     <nav th:include="include_header::nav"  class="navbar navbar-default navbar-fixed-top" id="navbar"  ></nav>
 </header>
-
+<style>
+    #myOrderTable a{margin: 0.1em}
+</style>
 <body class="">
 <div class="wrapper wrapper-content animated fadeInRight container">
     <div class="row justify-content-center">
