--- a/src/main/resources/templates/manager/order/order.html
+++ b/src/main/resources/templates/manager/order/order.html
@@ -2,6 +2,9 @@
 <html>
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
+<style>
+	#exampleTable a{margin: 0.1em}
+</style>
 <body class="gray-bg">
 	<div class="wrapper wrapper-content ">
 		<div class="col-sm-12">
@@ -28,7 +31,7 @@
 			</div>
 		</div>
 	</div>
-	<!--shiro控制bootstraptable行内按钮看见性 来自bootdo的创新方案 -->
+
 		<div>
 			<script type="text/javascript">
 				var s_edit_h = 'hidden';
