付款码修改

--- a/src/main/resources/templates/manager/order/pay.html
+++ b/src/main/resources/templates/manager/order/pay.html
@@ -8,70 +8,35 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
-                <div class="ibox-content">
+                <div class="ibox-content" th:if="${order != null}">
                     <form class="form-horizontal m-t" id="signupForm">
                         <input id="id" name="id" th:value="${order.id}"  type="hidden">
                         <input id="uuid" name="uuid" th:value="${uuid}"  type="hidden">
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">商品id：</label>
-                            <div class="col-sm-8">
-                                <h4 id="productId" name="productId" th:value="${order.productId}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">商品价格：</label>
-                            <div class="col-sm-8">
-                                <h4 id="price" name="price" th:text="${order.price}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">数量：</label>
-                            <div class="col-sm-8">
-                                <h4 id="quantity" name="quantity" th:text="${order.quantity}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">订单总金额：</label>
-                            <div class="col-sm-8">
-                                <h4 id="orderAmount" name="orderAmount" th:text="${order.orderAmount}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">下单时间：</label>
-                            <div class="col-sm-8">
-                                <h4 id="orderTime" name="orderTime" th:text="${order.orderTime}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">收货人：</label>
-                            <div class="col-sm-8">
-                                <h4 id="shipName" name="shipName" th:text="${order.shipName}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">收货人联系电话：</label>
-                            <div class="col-sm-8">
-                                <h4 id="shipPhone" name="shipPhone" th:text="${order.shipPhone}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">收货地址：</label>
-                            <div class="col-sm-8">
-                                <h4 id="shipAddress" name="shipAddress" th:text="${order.shipAddress}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">备注：</label>
-                            <div class="col-sm-8">
-                                <h4 id="remark" name="remark" th:text="${order.remark}" class="form-control" type="text"></h4>
-                            </div>
-                        </div>
+                        <h4 class="text-center center-block">付款金额</h4>
+                        <h4 class="text-center center-block text-danger" id="orderAmount" name="orderAmount" th:text="${order.orderAmount}" type="text"></h4>
                         <div class="form-group">
                             <div class="col-sm-8 col-sm-offset-3">
-                                <button type="button" class="btn btn-primary" onclick="payForOrder()">付款</button>
+                                <button type="button" class="btn btn-primary btn-block" onclick="payForOrder()">付款</button>
                             </div>
                         </div>
                     </form>
+                </div>
+                <div class="ibox-content" th:if="${order == null}">
+                    <div class="text-center center-block">
+                        <div class="">
+                            <span class="fa fa-qrcode fa-2x"></span>
+                            <span class="fa fa-qrcode fa-2x"></span>
+                        </div>
+                        <div class="">
+                            <span class="fa fa-qrcode fa-2x"></span>
+                            <span class="fa fa-times fa-2x" style="color:red;"></span>
+                        </div>
+                        <div class="">
+                            <p>付款二维码已失效请重新发起！</p>
+                            <p>如已经付款请关闭页面，请勿重复提交！</p>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
