修改二维码页面

--- a/src/main/resources/templates/manager/order/pay.html
+++ b/src/main/resources/templates/manager/order/pay.html
@@ -7,6 +7,11 @@
 <div class="wrapper wrapper-content ">
     <div class="row">
         <div class="col-sm-12">
+            <div class="text-center center-block">
+                <img src="/img/farm_mall_logo.jpg" class="img-responsive" style="margin-top: 1em;width: 8em;height: 8em">
+            </div>
+        </div>
+        <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-content" th:if="${order != null}">
                     <form class="form-horizontal m-t" id="signupForm">
